<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#669900"
    android:id="@+id/rl"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lenovo.checking_prime.Checking_Prime"
    tools:showIn="@layout/activity_checking__prime">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginBottom="121dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/gridLayout">
    </GridLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrectt"
        android:id="@+id/incorrec"
        android:background="#FF4500"
        android:allowUndo="false"
        android:layout_marginBottom="47dp"
        android:layout_above="@+id/nex"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctt"
        android:id="@+id/correc"
        android:background="#FF4500"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toEndOf="@+id/gridLayout" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextt"
        android:id="@+id/nex"
        android:background="#0000ff"
        android:textColor="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/imageView2" />

    <TextView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/texx"
        android:gravity="center"
        android:layout_marginBottom="29dp"
        android:layout_above="@+id/correc"
        android:layout_alignStart="@+id/correc"
        android:singleLine="true" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:src="@drawable/correct"
        android:background="#FFFFFF"
        android:layout_toEndOf="@+id/correc"
        android:layout_below="@+id/texx"
        android:layout_alignBottom="@+id/correc"
        android:contentDescription="@string/imagee"
        android:id="@+id/imageView" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:src="@drawable/incorrect"
        android:background="#FFFFFF"
        android:layout_alignTop="@+id/incorrec"
        android:layout_toStartOf="@+id/incorrec"
        android:layout_alignBottom="@+id/incorrec"
        android:contentDescription="@string/imagee2"
        android:id="@+id/imageView2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitt"
        android:id="@+id/exitt"
        android:textColor="#000000"
        android:background="#0000ff"
        android:allowUndo="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="33dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_hint"
        android:id="@+id/gethint"
        android:width="150dp"
        android:layout_below="@+id/nex"
        android:layout_alignStart="@+id/nex"
        android:layout_marginTop="10dp"
        android:layout_alignEnd="@+id/nex"
        android:background="#0066cc" />

    <Button
        android:width="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_cheat"
        android:layout_marginTop="10dp"
        android:id="@+id/getcheat"
        android:background="#0066cc"
        android:layout_below="@+id/gethint"
        android:layout_alignStart="@+id/gethint" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/hinttaken"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/texx"
        android:freezesText="true"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/cheattaken"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:freezesText="true"
        android:layout_above="@+id/texx" />

</RelativeLayout>